deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wardis
  labels:
    app.kubernetes.io/name: wardis-server
